[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/Inventory/Inventory.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/PieceList/PieceList.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=3]
[ext_resource path="res://GUI/EndScreen/EndScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/Destroy/Destroy.tscn" type="PackedScene" id=5]
[ext_resource path="res://GUI/InfoPopup/InfoPopup.tscn" type="PackedScene" id=6]
[ext_resource path="res://GUI/SoundControl/SoundControl.tscn" type="PackedScene" id=7]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="." instance=ExtResource( 1 )]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Destroy" parent="." instance=ExtResource( 5 )]

[node name="PieceList" parent="." instance=ExtResource( 2 )]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EndScreen" parent="." instance=ExtResource( 4 )]

[node name="InfoPopup" parent="." instance=ExtResource( 6 )]

[node name="SoundControl" parent="." instance=ExtResource( 7 )]
[connection signal="early_export" from="Inventory" to="." method="_on_Inventory_early_export"]
[connection signal="attempt_destroy" from="Destroy" to="." method="_on_Destroy_attempt_destroy"]
[connection signal="restart" from="EndScreen" to="." method="_on_EndScreen_restart"]
[connection signal="change_time_enabled" from="SoundControl" to="." method="_on_SoundControl_change_time_enabled"]
